unpackaged/main/default/objects/ucinn_ascendv2__Operating_Entity__c/ucinn_ascendv2__Operating_Entity__c.object-meta.xml
<CustomObject>
    <label>Operating Entity</label>
    <nameField>
        <label>Operating Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>