unpackaged/main/default/objects/ucinn_ascendv2__Operating_Entity__c/fields/ucinn_ascendv2__Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>