unpackaged/main/default/objects/ucinn_ascendv2__Operating_Entity__c/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>