unpackaged/main/default/objects/ucinn_ascendv2__Operating_Entity__c/fields/ucinn_ascendv2__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Short_Description__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>